--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@types/react-dom": "^17.0.9",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "less": "^4.1.1",
@@ -25,6 +26,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/react": "^17.0.14",
     "css-loader": "^5.2.6",
     "react-dom": "^17.0.2",
     "style-loader": "^3.0.0"
